# AI-Powered-Video-Interview-Bot-MVP-

./: .env  doc.txt  main.py  packages.txt  pyproject.toml  readme.md  requirements.txt
data/: submissions.json
templates/: recorder.html
utils/: llm.py  stt.py  tts.py  video_audio_recorder.py
